ref replace Collections.singletonList with List.of for authority retrieval in AuthUser